fixed issue where elements were not rendering to to root div, which should improve a11y for screen readers. Trying improved random number generator to see if it works on mobile gpus. Still working on making canvas take up 100% of body at all times

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -1,17 +1,13 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
+/* html {min-height: 100%; margin: 0;} */
 
 body {
+	/* min-height: 100%; */
 	background-color: rgba(0, 0, 0, 0.8);
 	color: #fff;
 	margin: 0;
-	padding: 8px;
+	/* padding: 8px; */
 	box-sizing: border-box;
 	font-family: 'Space Mono', monospace;
-	/* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 }
 
   canvas {
